<resources>
    <string name="app_name">Petti</string>

    <!-- Strings related to login -->
    <string name="sign_out">Sign Out</string>
    <string name="facebook_application_id" translatable="false">1218781828159702</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_password">Password can not be empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="button1">chat</string>
    <string name="button2">delete</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <color name="gray">#EEEEEE</color>
    <string name="action_settings">Settings</string>
    <string name="schedule_a_walk">Find A Mate For A Walk\n\nonly people who want to walk now</string>
    <string name="find_walk_partners_around">Find All The Dog Owners In Your Area</string>
    <string name="pref_notification_opt">Show Notification</string>
    <string name="pref_receive_nots" translatable="false">Do you want to receive pop notifications?</string>
    <string name="pref_receive_nots_defualt" translatable="false">true</string>
    <string name="get_ready_for_a_walk">Get Ready For A Walk! Whoff</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_neighbor_dogs">Neighboring Dogs</string>
    <string name="utils">Utils</string>
    <string name="bark">Bark</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_share">Share</string>

    <!-- dog type  -->
    <string-array name="dog_types_array">
        <item>Select Type</item>
        <item>poodle</item>
        <item>golden</item>
        <item>german</item>
        <item>mixed</item>
        <item>cnaany</item>
        <item>shiwawa</item>
        <item>monkey</item>
    </string-array>

    <!-- dog character  -->
    <string-array name="dog_character_array">
        <item>Select characteristics</item>
        <item>playful</item>
        <item>aggresive</item>
        <item>aggresive to males</item>
        <item>aggresive to females</item>
        <item>get along</item>
        <item>energetic</item>
        <item>tired</item>
    </string-array>

    <!-- city  -->
    <string-array name="city_array">
        <item>Select City</item>
        <item>Tel-aviv</item>
        <item>Haifa</item>
        <item>Beer-Sheva</item>
        <item>Jerusalem</item>
        <item>Kriot area</item>
        <item>Eilat</item>
        <item>Netanya</item>
    </string-array>


    <!-- user_looking for  -->
    <string-array name="looking4_array">
        <item>Looking for:</item>
        <item>company while walking my dog</item>
        <item>share dog walking</item>
        <item>date for my dog</item>
        <item>play partner for my dog</item>
        <item>play partner for myself</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches_found">Matches Found</string>
    <string name="title_activity_user_registration_activitey">UserRegistrationActivitey</string>
    <string name="poogy">Poogy</string>
    <string name="invalid_distance">Invalid Distance - Should Be Between 1 And 20</string>
    <string name="start_chat">Start Chat</string>
    <string name="add_as_friend">Add As\nFriend!</string>
    <string name="bark_on">true</string>
    <string name="bark_off">false</string>
    <string name="no_matches_found">Sorry mate/mam…\nNo matches found...\nWhy not walking a bit further?...</string>
    <string name="visible_pref_sum">When non visible - Other people won\'t see you and you won\'t see them\n</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="food_name">Food Name</string>
    <string name="amount">Amount (In KGs)</string>
    <string name="none">None</string>
    <string name="bought_it">Bought It!</string>
    <string name="per_meal">Per Meal (In Grams)</string>
    <string name="show_owner">Show Owner</string>
    <string name="show_dog">Show Dog</string>
    <string name="searching_matches">I\'m searching for other dogs DWAG...\nSo chilex!!!</string>
    <string name="default_dog_name">John Doggo</string>

    <string name="google_maps_key">AIzaSyBZyRKaA1u5_zERTtpj-jfhteacAw0YgB0</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_vets">View Veterinary Cares</string>
    <string name="find_parks">View Parks</string>
    <string name="find_pet_stores">View Pet Stores</string>
    <string name="title_activity_maps2">Map</string>

    <string name="slogen">You\'ll Never Walk Alone</string>
    <string name="non_visible_string_str">HEY!!!\nIF VISIBILITY IS DISABLED\nYOU WON\'T SEE OTHER PEOPLE TOO!</string>
    <string name="neighbour_dogs">Neighbour Dogs</string>
    <string name="who_want_to_walk_now">Who Want To Walk Now</string>
    <string name="my_friends">My Friends</string>
    <string name="food_notifications">Food Notifications</string>
    <string name="vaccination_card">Vaccination Card</string>
    <string name="friends_parks_vets_and_shops_map">Parks, Vets, and Shops map</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="edit_dog_profile">Edit Dog Profile</string>
    <string name="sign_out_str">Sign Out</string>
    <string name="find_neighbours">find_neighbours</string>
    <string name="back">Back</string>
    <string name="view_matches_on_map">View Matches On Map</string>
    <string name="name_input">Name:</string>
    <string name="birth_date_input">Birth Date</string>
    <string name="gender_input_male">Male</string>
    <string name="gender_input_female">Female</string>
    <string name="address_input">Tap here to set address</string>
    <string name="upload_owner_photo_tn">Upload</string>
    <string name="owner_description_input">describe your self in a few words</string>
    <string name="describe_yourself_shortly_below">Describe Yourself Shortly Below</string>
    <string name="describe_yourself_shortly_here">Describe Yourself Shortly Here</string>
    <string name="describe_your_dog_shortly_below">Describe Your Dog Shortly Below</string>
    <string name="describe_your_dog_shortly_here">Describe Your Dog Shortly Here</string>
    <string name="name_dog_input">Name:</string>
    <string name="birth_date_dog_input">Birth Date:</string>
    <string name="dog_gender_male">Male</string>
    <string name="dog_gender_female">Female</string>
    <string name="report_user">Report User</string>
</resources>
