<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">


    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/amount" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:text="@string/bought_it"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bought_it_btn"/>

    </LinearLayout>

    <TableLayout
        android:id="@+id/food_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="bottom|center_horizontal"
        android:padding="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/purchase_date"
                android:inputType="date"
                android:layout_height="wrap_content"
                android:text="@string/purchase_date"/>

            <TextView
                android:id="@+id/food_name"
                android:layout_height="wrap_content"
                android:text="@string/food_name" />

            <TextView
                android:id="@+id/amount"
                android:layout_height="wrap_content"
                android:text="@string/amount" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/first_row_purchase_date"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <TextView
                android:id="@+id/first_row_food_name"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <TextView
                android:id="@+id/first_row_amount"
                android:layout_height="wrap_content"
                android:text="@string/none" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/second_row_purchase_date"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <TextView
                android:id="@+id/second_row_food_name"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <TextView
                android:id="@+id/second_row_amount"
                android:layout_height="wrap_content"
                android:text="@string/none" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/third_row_purchase_date"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <TextView
                android:id="@+id/third_row_food_name"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <TextView
                android:id="@+id/third_row_amount"
                android:layout_height="wrap_content"
                android:text="@string/none" />
        </TableRow>
    </TableLayout>
</LinearLayout>
